[Bug] Dropdowns not showing on onclick
The Dropdowns was showing onhover instead of on click
I removed ':hover' to give full control on js

--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ header {
 
 /* Enable hover on desktop */
 @media (min-width: 769px) {
-  .dropdown:hover .hover-element {
+  .dropdown.active .hover-element {
     display: block;
   }
 
